# virtual-display

./: .gitignore  README.md
src/: VirtualDisplay.sln
src/VirtualDisplay.Abstraction/: FrameBuffer.cs  IVideoConverter.cs  VideoFormat.cs  VirtualDisplay.Abstraction.csproj
src/VirtualDisplay.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowView.cs  NativeMethods.cs  VirtualDisplay.App.csproj
src/VirtualDisplay.App/Properties/: launchSettings.json
src/VirtualDisplay.Core/: ImageUtils.cs  NativeMethods.cs  ScreenCapture.cs  ScreenReceiver.cs  ScreenTransmitter.cs  VirtualDisplay.Core.csproj
src/VirtualDisplay.Decoder.Native/: CMakeCache.txt  CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  Makefile  VirtualDisplay.Decoder.Native.vcxproj  VirtualDisplay.Decoder.Native.vcxproj.filters  cmake_install.cmake  dllmain.cpp  framework.h  pch.h
src/VirtualDisplay.Driver/: Controls.h  Driver.cpp  Driver.h  VirtualDisplay.Driver.filters  VirtualDisplay.Driver.rc  VirtualDisplay.Driver.vcxproj  VirtualDisplay.Driver.vcxproj.filters  VirtualDisplay.inf  resource.h
src/VirtualDisplay.Native/: Driver.h  H264Encoder.cpp  H264Encoder.h  VirtualDisplay.Native.vcxproj  VirtualDisplay.Native.vcxproj.filters  VirtualDisplayManager.cpp  VirtualDisplayManager.h  framework.h  pch.h
src/VirtualDisplay.Test/: Program.cs  Tasks.cs  VirtualDisplay.Test.csproj
src/VirtualDisplay.Unity/: H264Decoder.cs  VirtualDisplay.Unity.csproj
src/VirtualDisplay.Unity.Sample/: Assembly-CSharp.csproj  Stream.sln  VirtualDisplay.Unity.Sample.sln
(+21 files in other folders)
